--- a/project.css
+++ b/project.css
@@ -309,3 +309,66 @@ body.hide {
     background: rgb(255, 139, 93);
     z-index: 3;
 }
+
+
+@media screen and (max-width: 1024px) {
+    main {
+        width: 100%;
+        margin: 0;
+    }
+
+    .slide {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    .hero-desc {
+        padding: 0;
+    }
+
+    .hero-img {
+        padding-top: 4;
+    }
+
+    .hero-desc h2 {
+        font-size: 1.6rem;
+        padding: 1rem 0rem;
+    }
+
+    .hero-desc p {
+        padding: 2rem 1rem;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        text-align: center;
+    }
+
+    .explore {
+        width: 60%;
+        margin: auto;
+    }
+
+    .detail-slide {
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav-bar {
+        display: block;
+    }
+
+    .nav-links {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .contact h2 {
+        font-size: 3rem;
+    }
+
+    .contact p {
+        font-size: 1.2rem;
+        padding: 2rem;
+        text-align: center;
+    }
+}
